# engine-zero

./: .gitmodules  CMakeLists.txt  LICENSE
include/engine-one/core/: Actor.h  Context.h  CoreEngine.h  EngineOptions.h  Game.h  Scene.h  SceneResult.h
include/engine-one/graphics/: AnimatedSprite.h  Sprite.h  Transform.h
include/engine-one/resource/: ResourceLoader.h  ResourceManager.h
include/engine-one/tilemap/: Tile.h  TileLayer.h  TileMap.h
include/engine-one/tools/: Logger.h
include/engine-one/ui/: UIState.h
include/engine-zero/core/: Actor.h  Context.h  CoreEngine.h
include/engine-zero/graphics/: AnimatedSprite.h  Camera.h  Color.h  GraphicsEngine.h  Rectangle.h  Renderable.h  Sprite.h  Transform.h
include/engine-zero/physics/: Collision.h  CollisionBox.h  MovingBody.h  PhysicsEngine.h  RigidBody.h
include/engine-zero/resource/: Tiled.h
include/engine-zero/tilemap/: Tile.h  TileMap.h
include/engine-zero/ui/: Input.h  UserInterface.h
source/core/: Actor.cpp  Context.cpp  CoreEngine.cpp  Game.cpp  Options.cpp  Scene.cpp
source/engine-one/sdl/: SDLGraphicsEngine.cpp  SDLInputManager.cpp  SDLInputManager.h  SDLSprite.cpp  SDLSprite.h  SDLUtils.h
source/engine-zero/sdl/: SDLGraphicsEngine.cpp  SDLSprite.cpp  (+5 more)
source/graphics/: AnimatedSprite.cpp  Camera.cpp  Color.cpp  GraphicsEngine.cpp  Rectangle.cpp  Renderable.cpp  Sprite.cpp  Transform.cpp
source/physics/: CollisionBox.cpp  MovingBody.cpp  PhysicsEngine.cpp  RigidBody.cpp
source/resource/: ResourceManager.cpp  Tiled.cpp
source/tilemap/: TileMap.cpp
source/ui/: UserInterface.cpp
